--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@ License: You must have a valid license purchased only from https://themes.getboo
     <head>
         <meta charset="utf-8" />
         <link rel="icon" href="./favicon.svg" />
-        <title>Canna Source | Admin</title>
+        <title> Honda | Admin</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -70,7 +70,7 @@ License: You must have a valid license purchased only from https://themes.getboo
             style="overflow:hidden;height:100%"
         >
             <img
-                src="%PUBLIC_URL%/media/logos/Canna-Logo.png"
+                src="%PUBLIC_URL%/media/logos/honda-logo.png"
                 alt="Canna logo"
                 width="20%%"
             />
