added some fields in  course name,course type,vehicle category pages

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@ License: You must have a valid license purchased only from https://themes.getboo
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="./favicon.svg" />
+        <link rel="icon" href="%PUBLIC_URL%/media/logos/honda-logo.png" />
         <title> Honda | Admin</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!--
@@ -71,7 +71,7 @@ License: You must have a valid license purchased only from https://themes.getboo
         >
             <img
                 src="%PUBLIC_URL%/media/logos/honda-logo.png"
-                alt="Canna logo"
+                alt="Honda logo"
                 width="20%%"
             />
             <svg class="splash-spinner" viewBox="0 0 50 50">
