--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@ License: You must have a valid license purchased only from https://themes.getboo
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/media/logos/honda-logo.png" />
+        <link rel="icon" href="%PUBLIC_URL%/media/logos/favicon.png" />
         <title> Honda | Admin</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!--
